# kaggle

./: .gitignore  pyproject.toml  requirements.txt
src/: image_transformations.py  plotting.py
src/digit_recognizer/: submission.ipynb  tests_and_training.ipynb
src/geophysical_waveform_inversion/: main.py  start.ipynb
src/rainfall/: submission.ipynb  tests_and_training.ipynb  transformer_impl.py
src/space_titanic/: train_and_test.ipynb  transformer_impl.py
src/titanic/: revisited.ipynb  submission.ipynb  tests_and_training.ipynb  titanic.ipynb  transformer_impl.py
