[project]
name = "geophysical-waveform-inversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "darts>=0.35.0",
    "feature-engine>=1.8.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.2",
    "matplotlib>=3.10.1",
    "notebook>=7.4.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tensorflow>=2.19.0",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
